[tool.poetry]
name = "dp-spatial-decompositions"
version = "0.0.1"
description = "Python implementation of Cormode et al.'s 'Differentially Private Spatial Decompositions.'"
authors = ["Joe Kerrigan <joek1301@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
