[tool.poetry]
name = "dp-spatial-decompositions"
version = "0.0.1"
description = "Python implementation of Cormode et al.'s 'Differentially Private Spatial Decompositions.'"
authors = ["Joe Kerrigan <joek1301@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
pandas = "^1.4.2"
Shapely = "^1.8.1"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"
notebook = "^6.4.12"
ipykernel = "^6.15.3"
seaborn = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
ipykernel = "^6.12.1"
notebook = "^6.4.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
